overflow fixes2

--- a/style.css
+++ b/style.css
@@ -74,6 +74,9 @@ body {
 
 
 
+
+
+
 #comissionpage{
     padding: 20px;
     display: grid;
@@ -121,8 +124,11 @@ iframe{
 
 
 top-app-bar{
+
     display: flex;
     position: absolute;
+    overflow-x:hidden;
+    
 
     background-color:var(--md-sys-color-surface-container) ;
 
@@ -130,7 +136,6 @@ top-app-bar{
     width: 100svw;
 
     align-items: center;
-    padding-left: 20px;
     z-index: 3;
 
 }
